# gsoap_service

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TODO  TODO~  clearcmake  cmake_install.cmake  compile_commands.json  server.cpp  server.h
can232/: CCan232.cpp  CCan232.h
can_devices/: CCanConstans.h  CCanPWMActor.cpp  CCanPWMActor.h  CCanRGBActor.cpp  CCanRGBActor.h  CCanSimpleSwitchActor.cpp  CCanSimpleSwitchActor.h  CCanSimpleSwitchSensor.cpp  CCanSimpleSwitchSensor.h
db/: config.db  config.db-journal  config.db.bak  config.db.bak.2  config.db.bak.3  config.db.bak.4  config.db.bak.5  config.db.bak.6
firmware/: ACTOR_PWMx14_0x800.hex  ACTOR_PWMx8_0x800.hex  ACTOR_RGBx2_0x800.hex  ACTOR_RGBx3_0x800.hex  ACTOR_RGBxteset.hex  ACTOR_SWITCHx1.hex  ACTOR_SWITCHx1_0x800.hex  ACTORx2_SENSORx1_0x800.hex  ACTORx4_SENSORx3_0x800.hex  ACTORx5_SENSORx3_0x000.hex  ACTORx5_SENSORx3_0x000_RAW.hex  ACTORx5_SENSORx3_0x800.hex  a1.hex  a4s3.hex  a5s3.hex  as.hex  e  g  pwm.hex  t  t.hex  t3  t3.hex  t5.hex  t6.hex  test1.hex  test_fake1.hex  test_fake2.hex  test_fake3.hex  testex.hex  testex2.hex
homesys/: CActionManager.cpp  CActionManager.h  CActionTranslator.cpp  CActionTranslator.h  CActionsChain.cpp  CActionsChain.h  CDevice.cpp  CDevice.h  CDeviceManager.cpp  CDeviceManager.h  CMakeLists.txt  COperation.cpp  COperation.h  CSoapServer.cpp  CSoapServer.h  CTimer.cpp  CTimer.h  homesys.cpp  homesys.h
raspberry/: CGPIOClass.cpp  CGPIOClass.h
tools/: CBlob.cpp  CBlob.h  CBuffer.cpp  CBuffer.h  CCanBuffer.cpp  CCanBuffer.h  CConfiguration.cpp  CConfiguration.h  CDatabase.cpp  CDatabase.h  CDevicesConfig.cpp  CDevicesConfig.h  CFirmwareBuffer.cpp  CFirmwareBuffer.h  CFirmwareLoader.cpp  CFirmwareLoader.h  CLog.cpp  CLog.h  CParamsConverter.cpp  CParamsConverter.h  CSerCom.cpp  CSerCom.h  CTimeOut.cpp  CTimeOut.h  CTools.cpp  CTools.h  Delegate.h  FastDelegate.h  Signal.h  rapidxml.hpp  types.h
webservice/: CMakeList.txt__  CMakeLists.txt  homesys.getCurrentTime.req.xml  homesys.getCurrentTime.res.xml  homesys.getDevicesList.req.xml  homesys.getDevicesList.res.xml  homesys.getFilesList.req.xml  homesys.getFilesList.res.xml  homesys.getValue.req.xml  homesys.getValue.res.xml  homesys.getXML.req.xml  homesys.getXML.res.xml  homesys.h  homesys.makeRemoteAction.req.xml  homesys.makeRemoteAction.res.xml  homesys.nsmap  homesys.saveXML.req.xml  homesys.saveXML.res.xml  homesys.searchNewDevices.req.xml  homesys.searchNewDevices.res.xml  homesys.setDeviceName.req.xml  homesys.setDeviceName.res.xml  homesys.switchPort.req.xml  homesys.switchPort.res.xml  homesys.uploadFirmware.req.xml  homesys.uploadFirmware.res.xml  homesys.wsdl  soapC.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapServer.cpp  soapServerLib.cpp  soapStub.h  soaphomesysObject.h  soaphomesysProxy.cpp  soaphomesysProxy.h  soaphomesysService.cpp  soaphomesysService.h
xml/: actions_chain.xml  device_descriptions.xml  operations.xml
